<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_bunksheets"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/bunksheets"/>

        <item
            android:id="@+id/navigation_approve_bunksheets"
            android:icon="@drawable/ic_assignment_turned_in_black_24dp"
            android:title="@string/approve_bunksheets"
            android:visible="false"/>

        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/profile"/>

        <item
            android:id="@+id/navigation_logout"
            android:icon="@drawable/ic_lock_black_24dp"
            android:title="@string/logout"/>
    </group>

    <group
        android:id="@+id/group_feedback"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/feedback"/>
    </group>
</menu>