<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.yashshah.bunksheetmanagementsystem.RequestBunksheetActivity"
    >

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:fillViewport="true"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="16dp"
          android:fontFamily="sans-serif-medium"
          android:text="@string/bunksheet_reason"
          android:textAppearance="?android:attr/textAppearanceSmall"
          android:textColor="@color/colorAccent"
          />

      <Spinner
          android:id="@+id/spinner_reason"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:layout_marginEnd="12dp"
          android:layout_marginStart="12dp"
          android:entries="@array/bunksheetReasons_array"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="12dp"
          android:fontFamily="sans-serif-medium"
          android:text="@string/date"
          android:textAppearance="?android:attr/textAppearanceSmall"
          android:textColor="@color/colorAccent"
          />

      <Spinner
          android:id="@+id/spinner_date"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:layout_marginEnd="12dp"
          android:layout_marginStart="12dp"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="16dp"
          android:fontFamily="sans-serif-medium"
          android:text="@string/time_slots"
          android:textAppearance="?android:attr/textAppearanceSmall"
          android:textColor="@color/colorAccent"
          />

      <CheckBox
          android:id="@+id/checkbox_firstSlot"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="12dp"
          android:layout_marginTop="12dp"
          android:paddingEnd="12dp"
          android:paddingStart="12dp"
          android:text="@string/slot_first"
          android:textAppearance="?android:attr/textAppearanceMedium"
          />

      <CheckBox
          android:id="@+id/checkbox_secondSLot"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="12dp"
          android:layout_marginTop="8dp"
          android:paddingEnd="12dp"
          android:paddingStart="12dp"
          android:text="@string/slot_second"
          android:textAppearance="?android:attr/textAppearanceMedium"
          />

      <CheckBox
          android:id="@+id/checkbox_thirdSlot"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="12dp"
          android:layout_marginTop="8dp"
          android:paddingEnd="12dp"
          android:paddingStart="12dp"
          android:text="@string/slot_third"
          android:textAppearance="?android:attr/textAppearanceMedium"
          />

      <android.support.design.widget.TextInputLayout
          android:id="@+id/textInputLayout_placesVisited"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="12dp"
          android:layout_marginLeft="12dp"
          android:layout_marginRight="12dp"
          android:layout_marginStart="12dp"
          android:layout_marginTop="16dp"
          >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditText_placesVisited"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/places_visited"
            android:inputType="textCapSentences|textMultiLine"
            />
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:id="@+id/textInputLayout_entries"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="12dp"
          android:layout_marginLeft="12dp"
          android:layout_marginRight="12dp"
          android:layout_marginStart="12dp"
          android:layout_marginTop="16dp"
          >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditText_entries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_entries"
            android:inputType="number"
            android:maxLines="1"
            />
      </android.support.design.widget.TextInputLayout>
    </LinearLayout>
  </ScrollView>

  <Button
      android:id="@+id/button_request_bunksheet"
      android:layout_width="match_parent"
      android:layout_height="56dp"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="12dp"
      android:layout_marginLeft="12dp"
      android:layout_marginRight="12dp"
      android:layout_marginStart="12dp"
      android:layout_marginTop="16dp"
      android:text="@string/request_bunksheet"
      style="@style/Widget.AppCompat.Button.Colored"
      />
</LinearLayout>
