<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.yashshah.bunksheetmanagementsystem.LoginActivity">

    <Button
        android:id="@+id/button_log_in"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_log_in"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/imageButton_fb_login"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:paddingBottom="12dp"
                android:paddingEnd="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingStart="12dp"
                android:paddingTop="12dp"
                android:scaleType="fitStart"
                app:backgroundTint="#3C5A96"
                app:srcCompat="@drawable/fb_logo_white_1024"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/log_in_facebook"
                android:textAppearance="?android:attr/textAppearanceButton"
                android:textColor="@android:color/white"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginStart="12dp">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/imageButton_google_login"
                backgroundTint="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:elevation="1dp"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/google_logo_1024"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="1dp"
                android:text="@string/sign_in_google"
                android:textAppearance="?android:attr/textAppearanceButton"/>
        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="64dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginStart="12dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/forgot_password"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/textView_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/sign_up"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>
</RelativeLayout>
