<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.yashshah.bunksheetmanagementsystem.FeedbackFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/feedback_userExperience"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorAccent"/>

        <Spinner
            android:id="@+id/spinner_feedback_userExperience"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:entries="@array/feedback_array"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:text="@string/feedback_functionality"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorAccent"/>

        <Spinner
            android:id="@+id/spinner_feedback_functionality"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:entries="@array/feedback_array"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:text="@string/feedback_other_comments"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorAccent"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_otherComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditText_otherComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textCapSentences|textMultiLine"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_send_feedback"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/send_feedback"/>
</RelativeLayout>
